# ai-monitoring-governance-framework

./: .gitignore  README.md  common.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
api/: main.py
data/: golden_set.jsonl  prepare_data.py
monitor/: logging_db.py  rules.py
rag/: generate.py  ingest.py  pipeline.py
scripts/: calibrate_thresholds.py  retrieval_benchmark.py  test_harness.py
tests/: test_rules.py
